Add partner functionality
